<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    android:elevation="50dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/idAvatar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_profile"
            android:elevation="20dp"
            android:src="@drawable/logo_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/idDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/idAvatar"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idlabelPrenom"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/label_prenom"
                    android:textColor="@color/labeColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/idElevePrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/prenom"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idlabelNom"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/label_nom"
                    android:textColor="@color/labeColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/idEleveNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/nom"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idlabelClasse"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/label_classe"
                    android:textColor="@color/labeColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/idEleveClasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/classe"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>