<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_margin="5dp"
        android:elevation="50dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/idAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/image_profile"
                android:padding="15dp"
                android:src="@drawable/add_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/idDesc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/photo"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/idAvatar"
                app:layout_constraintStart_toStartOf="parent"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/idAvatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <!--edit text for our eleve name-->
                <EditText
                    android:id="@+id/idEdtElevePrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/prenom"
                    android:inputType="textPersonName" />

                <!--edit text for our eleve description-->
                <EditText
                    android:id="@+id/idEdtEleveNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/nom"
                    android:inputType="textPersonName" />

                <!--edit text for eleve description-->
                <EditText
                    android:id="@+id/idEdtEleveClasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/classe"
                    android:inputType="text" />

                <!--button for saving data to room database-->



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/idBtnSaveEleve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:padding="5dp"
            android:shadowColor="#191515"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="2"
            android:text="@string/enregistrer"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:icon="@drawable/ic_save_icon"
            app:iconPadding="10dp"
            app:iconTint="#BCE40C" />
    </LinearLayout>

</LinearLayout>
